# elmphonelog

./: AUTHORS  configure.ac
data/: Makefile.am  elmphonelog.desktop
src/: Makefile.am  addcontact.vala  contact.vala  elmphonelog.vala  fileselector.vala  freesmartphone-gsm.vala
